fix: fix gitIgnore for private developer files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 projects/standford-swift-iOS/Psychologist/Psychologist.xcodeproj/xcuserdata/*
 projects/standford-swift-iOS/Psychologist/Psychologist.xcodeproj/project.xcworkspace/xcuserdata/*
+projects/standford-swift-iOS/Calculator/Calculator.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
+projects/standford-swift-iOS/Happiness/Happiness.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
+projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
+projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/xcuserdata/*
