fix: gitignore for ignoring userclasses

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ projects/standford-swift-iOS/Calculator/Calculator.xcodeproj/project.xcworkspace
 projects/standford-swift-iOS/Happiness/Happiness.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
 projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
 projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/xcuserdata/*
+projects/standford-swift-iOS/Autolayout/Autolayout.xcodeproj/project.xcworkspace/xcuserdata/*
