fix: fix gitignore to ignore user files for Dropit

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ projects/standford-swift-iOS/Happiness/Happiness.xcodeproj/project.xcworkspace/x
 projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
 projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/xcuserdata/*
 projects/standford-swift-iOS/Autolayout/Autolayout.xcodeproj/project.xcworkspace/xcuserdata/*
+projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/project.xcworkspace/xcuserdata/*
+projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/xcuserdata/*
