fix: remove personal developer certificates

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ projects/standford-swift-iOS/SizeClassesDemo/SizeClassesDemo.xcodeproj/xcuserdat
 projects/standford-swift-iOS/Autolayout/Autolayout.xcodeproj/project.xcworkspace/xcuserdata/*
 projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/project.xcworkspace/xcuserdata/*
 projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/xcuserdata/*
+gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu.xcodeproj/xcuserdata/Zizo.xcuserdatad/*
+gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
