feature: color the main view background based on the nearest beacon

--- a/gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu/Info.plist
+++ b/gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow $(PRODUCT_NAME) to start listening to near CoreBlu</string>
 </dict>
 </plist>
