fix: remove the users files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/project.xcworkspace/xcuserd
 projects/standford-swift-iOS/DropIt/DropIt.xcodeproj/xcuserdata/*
 gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu.xcodeproj/xcuserdata/Zizo.xcuserdatad/*
 gistic/haram/iBeaconUsingCoreBlu/iBeaconUsingCoreBlu.xcodeproj/project.xcworkspace/xcuserdata/Zizo.xcuserdatad/*
+gistic/haram/Nodejs-C++Demo/Nodejs-C++Demo.xcodeproj/project.xcworkspace/xcuserdata/*
+gistic/haram/Nodejs-C++Demo/Nodejs-C++Demo.xcodeproj/xcuserdata/*
